--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "@types/passport-local": "^1.0.35"
   },
   "dependencies": {
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "^5.0.0",
     "@quixo3/prisma-session-store": "^3.1.11",
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
@@ -39,5 +39,12 @@
     "prisma": "^5.0.0",
     "socket.io": "^4.6.2",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35"
   }
 }
